<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GiftFriend</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Gift Friend</string>
    <string name="home">Home</string>
    <string name="friendsList">Friends List</string>
    <string name="friendsList_condensed">Friends</string>
    <string name="giftsList">Gifts List</string>
    <string name="giftsList_condensed">Gifts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_friends">Friends</string>
    <string name="hello_world">Hello world!</string>
	<string name="title_activity_gifts">Gifts</string>
	<string name="my_gifts">My Gifts</string>
	<string name="public_gifts">Public Gifts</string>
	<string name = "add_gift">Add Gift</string>
	<string name = "add_friend">Add Friend</string>
	<string name="giftName">Gift Name</string>
	<string name="giftLocation">Where to find</string>
	<string name="cancel">Cancel</string>
	<string name="createGift">Create new Gift</string>
	<string name="add_from_contact">Import contacts</string>
	<string name="add_new_friend">Add new</string>
	<string name="friendName">Friend Name</string>
	<string name="createFriend">Add new friend</string>
	<string name="errorCreate">The name can not be blank!</string>
</resources>